--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Produkty - RemoTech</title>
+    <link rel="icon" type="image/png" href="favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="favicon/favicon.svg" />
+    <link rel="shortcut icon" href="favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png" />
+    <link rel="manifest" href="favicon/web-app-manifest-192x192.png" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
@@ -20,7 +25,7 @@
         max-width: 99vw;
         margin: 0 auto;
         padding: 0;
-        min-height: 100vh;
+        min-height: 20vh;
       }
       .header {
         position: sticky;
@@ -62,9 +67,23 @@
         color: #fff;
         border: none;
         padding: 12px 20px;
+        font-size: 16px;
         border-radius: 6px;
         font-weight: 500;
-        margin-left: 0;
+        margin: 0;
+        cursor: pointer;
+        transition: background 0.2s;
+        text-decoration: none;
+      }
+      .header__login__btn {
+        background: #111;
+        color: #fff;
+        border: none;
+        padding: 11px 20px;
+        font-size: 16px;
+        border-radius: 6px;
+        font-weight: 500;
+        margin: 0;
         cursor: pointer;
         transition: background 0.2s;
         text-decoration: none;
@@ -72,7 +91,19 @@
       .header__login:hover {
         background: #222;
       }
-
+      .login-form-group-btn .header__login__btn {
+        background: #111;
+        color: #fff;
+        border: none;
+        padding: 11px 20px;
+        font-size: 16px;
+        border-radius: 6px;
+        font-weight: 500;
+        margin: 0;
+        cursor: pointer;
+        transition: background 0.2s;
+        text-decoration: none;
+      }
       /* PRODUCTS PAGE HEADING */
       .produkty-header-row {
         display: flex;
@@ -116,7 +147,7 @@
       }
       .produkty-content {
         background: #f7f7f7;
-        padding: 42px 0 58px 0;
+        padding: 42px 40px 58px 40px;
       }
 
       /* PRODUCTS GRID */
@@ -365,8 +396,199 @@
         background-color: red;
         text-decoration: none;
       }
+      .login-form-section {
+        background: #fff;
+        width: 100%;
+        max-width: 1100px;
+        margin: 32px auto 48px auto;
+        border-radius: 16px;
+        box-shadow: 0 2px 16px #0001;
+        padding: 48px 80px 36px 80px;
+        position: relative;
+        z-index: 3;
+      }
+      .login-form-title {
+        font-size: 2rem;
+        font-weight: bold;
+        margin-bottom: 32px;
+        text-align: center;
+      }
+      .login-form-group {
+        display: flex;
+        margin: 0 auto 0 auto;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 2px;
+        width: 100%;
+        max-width: 340px;
+      }
+      .login-form-group-btn {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start; /* Zmieniono z center na flex-start */
+        margin: 0 auto 10px auto;
+        flex-direction: row;
+        gap: 16px; /* Możesz dostosować tę wartość odstępu */
+        width: 100%;
+        max-width: 340px; /* Upewnij się, że ta szerokość jest wystarczająca */
+      }
+
+      .login-form {
+        display: flex;
+        flex-direction: column;
+        align-self: center;
+        margin: 32px auto 48px auto;
+        width: 100%;
+        gap: 16px;
+        align-items: center;
+      }
+      .login-form label {
+        font-size: 1rem;
+        font-weight: 500;
+        margin-bottom: 6px;
+        align-self: flex-start;
+        width: 100%;
+        max-width: 340px;
+      }
+      input,
+      textarea {
+        width: 100%;
+        box-sizing: border-box;
+        padding: 4px 2px;
+        border-radius: 6px;
+        font-size: 1rem;
+        background: #fafafa;
+        outline: none;
+        transition: border 0.2s;
+        width: 100%;
+        max-width: 340px;
+        border: 1px solid #ddd;
+      }
+      textarea {
+        height: 150px;
+      }
+      .login-form button {
+        background: #111;
+        color: #fff;
+        border: none;
+        margin: 0 auto 10px auto;
+        border-radius: 6px;
+        padding: 12px 0;
+        font-size: 1.1rem;
+        font-weight: 600;
+        cursor: pointer;
+        margin-top: 10px;
+        transition: background 0.2s;
+        width: 100%;
+        max-width: 180px;
+        align-self: center;
+      }
+      .login-form button:hover {
+        background: #222;
+      }
+      @media (max-width: 600px) {
+        .login-form-section {
+          padding: 32px 12px 24px 12px;
+        }
+        .login-form-title {
+          font-size: 1.3rem;
+        }
+      }
+      .admin-table {
+      margin: 0 40px 0 40px;
+      width: calc(100% - 80px);
+      border-collapse: collapse;
+      margin-top: 20px;
+      background-color: #fff;
+      font-size: 15px;
+    }
+
+    .admin-table thead {
+      background-color: #f1f1f1;
+      font-weight: bold;
+    }
+
+    .admin-table th,
+    .admin-table td {
+      border: 1px solid #ccc;
+      padding: 10px 15px;
+      text-align: left;
+      vertical-align: middle;
+    }
+
+    .admin-table tr:hover {
+      background-color: #f9f9f9;
+    }
+
+    .admin-actions a {
+      margin-right: 10px;
+      color: #0066cc;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .admin-actions a:hover {
+      text-decoration: underline;
+      color: #003399;
+    }
+    .header__login__table {
+        background: #111;
+        color: #fff;
+        border: none;
+        padding: 12px 20px;
+        font-size: 16px;
+        border-radius: 6px;
+        font-weight: 500;
+        margin-left: 0;
+        cursor: pointer;
+        transition: background 0.2s;
+        text-decoration: none;
+        margin-top: 30px;
+    }
+    .dashboard {
+      display: grid;
+      grid-template-columns: 2;
+      grid-template-rows: 3;
+      gap: 20px;
+      padding: 40px;
+      justify-content: center;
+    }
+
+    .kpi-card {
+      grid-row: span 1;
+      grid-column: span 1;
+      background-color: #ffffff;
+      border-radius: 12px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      padding: 24px 32px;
+      min-width: 200px;
+      text-align: center;
+      transition: transform 0.2s ease;
+    }
+
+    .kpi-card:hover {
+      transform: scale(1.03);
+    }
+
+    .kpi-title {
+      font-size: 16px;
+      color: #777;
+      margin-bottom: 8px;
+    }
+
+    .kpi-value {
+      font-size: 32px;
+      font-weight: bold;
+      color: #222;
+    }
+    .chart-container {
+      grid-row: span 2;
+      grid-column: span 2;
+      
+    }
     </style>
     <script src="js/auth.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
   <body>
     <header class="header" style="padding: 10px 40px">
@@ -393,7 +615,7 @@
             <p>Dodaj nowy produkt do bazy danych</p>
             <div class="produkty-bottom-row">
               <span class="product-price"></span>
-              <button class="" aria-label="">+</button>
+              <button class="button-admin-1" aria-label="">+</button>
             </div>
           </div>
           <div class="produkty-card">
@@ -402,16 +624,16 @@
             <p>Edytuj lub usuń produkt z bady danych</p>
             <div class="produkty-bottom-row">
               <span class="product-price"></span>
-              <button class="" aria-label="">+</button>
+              <button class="button-admin-2" aria-label="">+</button>
             </div>
           </div>
           <div class="produkty-card">
             <img src="assets/add-user.png" alt="edytuj_produkt" />
-            <h3>Zarządzaj użytkownikami</h3>
-            <p>Zarządzaj klientami i rolami</p>
+            <h3>Analityka sklepu</h3>
+            <p>Zobacz statystyki dotyczące sklepu</p>
             <div class="produkty-bottom-row">
               <span class="product-price"></span>
-              <button class="" aria-label="">+</button>
+              <button class="button-admin-3" aria-label="">+</button>
             </div>
           </div>
         </div>
@@ -436,5 +658,6 @@
         </button>
       </div>
     </footer>
+    <script src="js/admin.js"></script>
   </body>
 </html>
